bk_ida/gccida/c3/asm_emit_uninitialised
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/asm_emit_uninitialised/src/varasm.c:1839:24: error: expected expression
asm_emit_uninitialised::$EA4933C185C53E3D5B439ADB4EE0A6DF destination; // [rsp+24h] [rbp-1Ch] 
                       ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/asm_emit_uninitialised/src/varasm.c:1841:1: error: use of undeclared identifier 'destination'
destination = asm_dest_local; 
^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/asm_emit_uninitialised/src/varasm.c:1841:15: error: use of undeclared identifier 'asm_dest_local'
destination = asm_dest_local; 
              ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/asm_emit_uninitialised/src/varasm.c:1843:1: error: use of undeclared identifier 'destination'
destination = ( ( ( unsigned __int64)decl->real_cst.real_cst.r[2] >> 17) & 1) == 0; 
^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/asm_emit_uninitialised/src/varasm.c:1844:6: error: use of undeclared identifier 'destination'
if ( destination == asm_dest_bss ) 
     ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/asm_emit_uninitialised/src/varasm.c:1844:21: error: use of undeclared identifier 'asm_dest_bss'
if ( destination == asm_dest_bss ) 
                    ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/asm_emit_uninitialised/src/varasm.c:1847:6: error: use of undeclared identifier 'destination'
if ( destination ) 
     ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/asm_emit_uninitialised/src/varasm.c:1849:6: error: use of undeclared identifier 'destination'
if ( destination == asm_dest_bss ) 
     ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/asm_emit_uninitialised/src/varasm.c:1849:21: error: use of undeclared identifier 'asm_dest_bss'
if ( destination == asm_dest_bss ) 
                    ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/asm_emit_uninitialised/src/varasm.c:1855:6: error: use of undeclared identifier 'destination'
if ( destination != asm_dest_local ) 
     ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/asm_emit_uninitialised/src/varasm.c:1855:21: error: use of undeclared identifier 'asm_dest_local'
if ( destination != asm_dest_local ) 
                    ^
11 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/asm_emit_uninitialised/src/obj/varasm.o] Error 1
